# Dog

./: .gitignore  README.md  test_detail.xml
.github/: copilot-instructions.md
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-30-2051.md  brainstorming-session-2026-03-31-0000.md  brainstorming-session-2026-03-31-1000.md
_bmad-output/implementation-artifacts/: 1-1-基础工程骨架与接口防腐层搭建.md  1-2-verification-2026-04-03.txt  1-2-全局状态初始化与外参挂载对齐.md  1-3-memory-soak-30m-report.md  1-3-相机雷达数据接入与零拷贝目标-3d-解算.md  1-4-场地数字内容识别与语义下发.md  1-5-持久化基础设施准备与-io-工具链.md  2-1-实时全局本体位姿发布.md  2-2-异步动作指令-action-发送与监听.md  3-1-异常重试拦截与优雅降级熔断网关.md  4-1-感知算法动态工厂与热插拔注入.md  5-1-yaml-断电进度恢复读取与重启重建.md  5-2-单侧丢帧先验外推补偿与急停空转.md  5-3-节点假死心跳健康守护重联.md  code-review-5-1.diff  code-review-diff.patch  deferred-work.md  review-build-warning-count-2026-04-02.txt  review-interface-list-2026-04-02.txt  spec-digit-multi-result-target3darray-pipeline.md  spec-dog-behavior-tree-action-trigger.md  spec-target3d-to-target3darray-migration-for-multi-detection.md  sprint-status.yaml
_bmad-output/implementation-artifacts/evidence/5-2/: soak-report-20260404-103048.md
_bmad-output/implementation-artifacts/logs-story-1-4/: latest_build  latest_test  latest_test-result
_bmad-output/planning-artifacts/: architecture.md  architecture_struct_append.md  architecture_val_append.md  epics.md  implementation-readiness-report-2026-04-01.md  patterns_draft_append.md  patterns_draft_full.md  prd.md  sprint-change-proposal-2026-04-02.md
docs/: architecture.md  behavior-nav2-action-mapping-spec.md  behavior_tree_refactor_plan.md  development-instructions.md  dog-behavior-ai-reference.md  dog-lifecycle-ai-reference.md  dog-perception-ai-reference.md  index.md  integration-architecture.md  interface-architecture.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
src/Detect/: CMakeLists.txt  package.xml
src/Localization/: CMakeLists.txt  package.xml
src/dog_behavior/: CMakeLists.txt  package.xml
src/dog_behavior/config/: behavior_tree.xml  behavior_tree_test.xml  execute_trigger_tree.xml  nav2_params.yaml  waypoints_left.yaml  waypoints_right.yaml
src/dog_behavior/include/dog_behavior/: behavior_node.hpp  behavior_tree.hpp  behavior_tree_node.hpp  navigation_executor_node.hpp
src/dog_behavior/include/dog_behavior/bt_nodes/: advance_place_counter_action.hpp  check_system_mode.hpp  execute_behavior_action.hpp  execute_place_boxes_action.hpp  navigate_to_pose_action.hpp  place_index_action.hpp  place_rule_action.hpp  place_types.hpp  publish_math_answer_action.hpp  select_waypoint_action.hpp  set_boxes_type_action.hpp  wait_for_pose_condition.hpp
src/dog_behavior/include/dog_behavior/common/: payload_utils.hpp
src/dog_behavior/launch/: launch.py
src/dog_behavior/src/: behavior_node.cpp  behavior_tree.cpp  behavior_tree_main.cpp  behavior_tree_node.cpp  main.cpp  navigation_executor_main.cpp  navigation_executor_node.cpp
src/dog_behavior/src/bt_nodes/: advance_place_counter_action.cpp  check_system_mode.cpp  execute_behavior_action.cpp  execute_place_boxes_action.cpp  navigate_to_pose_action.cpp  place_index_action.cpp  place_rule_action.cpp  publish_math_answer_action.cpp  select_waypoint_action.cpp  set_boxes_type_action.cpp  wait_for_pose_condition.cpp
src/dog_behavior/src/common/: payload_utils.cpp
src/dog_behavior/test/: test_advance_place_counter_action.cpp  test_behavior_node.cpp  test_behavior_tree.cpp  test_behavior_tree_node.cpp  test_check_system_mode.cpp  test_execute_behavior_action.cpp  test_execute_place_boxes_action.cpp  test_navigate_to_pose_action.cpp  test_navigation_executor_node.cpp  test_payload_utils.cpp  test_place_index_action.cpp  test_place_rule_action.cpp  test_publish_math_answer_action.cpp  test_select_waypoint_action.cpp  test_set_boxes_type_action.cpp  test_wait_for_pose_condition.cpp
src/dog_interfaces/: CMakeLists.txt  package.xml
src/dog_interfaces/action/: ExecuteBehavior.action  PlaceBoxes.action
src/dog_interfaces/msg/: Target3D.msg  Target3DArray.msg
src/dog_interfaces/srv/: MathDetect.srv
src/dog_lifecycle/: CMakeLists.txt  package.xml
src/dog_lifecycle/config/: persistence.yaml
src/dog_lifecycle/include/dog_lifecycle/: lifecycle_node.hpp  state_store.hpp  yaml_state_store.hpp
src/dog_lifecycle/src/: lifecycle_node.cpp  main.cpp  yaml_state_store.cpp
src/dog_lifecycle/test/: test_lifecycle_node.cpp  test_yaml_state_store.cpp
src/dog_perception/: CMakeLists.txt  package.xml
src/dog_perception/config/: box_recognition.yaml  camera_extrinsics.yaml  digit_recognition.yaml
src/dog_perception/include/dog_perception/: box_detector.hpp  box_detector_node.hpp  camera_publisher_node.hpp  digit_recognizer.hpp  perception_node.hpp  target_3d_solver.hpp
src/dog_perception/src/: box_detector_node.cpp  box_detector_node_main.cpp  camera_main.cpp  camera_publisher_node.cpp  digit_recognizer_factory.cpp  main.cpp  perception_node.cpp  target_3d_solver_factory.cpp
src/dog_perception/src/detectors/: box_detector.cpp  heuristic_digit_recognizer.cpp  mean_intensity_digit_recognizer.cpp  opencv_dnn_yolo_digit_recognizer.cpp
src/dog_perception/test/: test_box_detector.cpp  test_box_detector_node.cpp  test_camera_publisher_node.cpp  test_digit_recognizer_factory.cpp  test_perception_node.cpp
tools/soak/: run_story_5_2_soak.sh
