<?xml version="1.0"?>
<package format="3">
  <name>dog_behavior</name>
  <version>0.0.1</version>
  <description>Behavior node skeleton for Dog project.</description>
  <maintainer email="dev@example.com">dog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dog_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>