<?xml version="1.0"?>
<package format="3">
  <name>dog_perception</name>
  <version>0.0.1</version>
  <description>Perception node skeleton for Dog project.</description>
  <maintainer email="dev@example.com">dog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>dog_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>tf2_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>